# Sentify

./: .gitignore  test_results.txt
.kiro/hooks/: auth-security-review.kiro.hook  code-review-quality.kiro.hook  dependency-audit.kiro.hook  git-safety-check.kiro.hook  post-task-tests.kiro.hook  secrets-scanner.kiro.hook  sql-injection-guard.kiro.hook  task-planning-review.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/sentiment-analysis-platform/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/middleware/: auth_middleware.py
backend/app/api/routes/: auth.py  batches.py
backend/app/core/interfaces/: __init__.py  auth_provider.py  nlp_provider.py  storage_provider.py
backend/app/core/models/: __init__.py  base.py  batch.py  feedback.py  keyword.py  schemas.py  user.py
backend/app/core/services/: batch_service.py  nlp_service.py
backend/app/infrastructure/auth/: local_auth_provider.py
backend/app/infrastructure/nlp/: spacy_nlp_provider.py
backend/app/infrastructure/storage/: __init__.py  database.py  sqlite_storage_provider.py
backend/app/utils/: csv_parser.py
backend/tests/: conftest.py
backend/tests/property/: test_auth_properties.py  test_csv_properties.py  test_storage_properties.py
backend/tests/unit/: test_auth_routes.py  test_batch_service.py  test_csv_parser.py
