[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentify-backend"
version = "1.0.0"
description = "Sentify - Plataforma de análisis de sentimiento para reseñas de clientes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "spacy>=3.7.0",
    "scikit-learn>=1.3.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.92.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]

# ---------------------------------------------------------------------------
# Pytest configuration
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

# ---------------------------------------------------------------------------
# Hypothesis configuration (min 100 examples per property)
# ---------------------------------------------------------------------------
[tool.hypothesis]
max_examples = 100
